// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container Renders with children 1`] = `
<div
  className="box justifyCenter xsDisplayFlex"
>
  <div
    className="box"
    style={
      Object {
        "maxWidth": 800,
        "width": "100%",
      }
    }
  >
    <div />
  </div>
</div>
`;

exports[`Container Renders with maxWidth 1`] = `
<div
  className="box justifyCenter xsDisplayFlex"
>
  <div
    className="box"
    style={
      Object {
        "maxWidth": 400,
        "width": "100%",
      }
    }
  >
    <div />
  </div>
</div>
`;

exports[`Container Renders with no props 1`] = `
<div
  className="box justifyCenter xsDisplayFlex"
>
  <div
    className="box"
    style={
      Object {
        "maxWidth": 800,
        "width": "100%",
      }
    }
  />
</div>
`;
